--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 		<spring.boot.mainclass>${project.basedir}/src/main/java/com/prueba/mano/mano/manomano/ManomanoApplication</spring.boot.mainclass>
 		<junit.version>5.8.2</junit.version>
 		<mapstruct.version>1.4.2.Final</mapstruct.version>
-		<lombok.version>1.16.20</lombok.version>
+		<lombok.version>1.18.22</lombok.version>
 		<easy.random.version>4.3.0</easy.random.version>
 		<junit-platform-commons.version>1.5.2</junit-platform-commons.version>
 		<mockito-junit-jupiter.version>4.2.0</mockito-junit-jupiter.version>
@@ -33,6 +33,8 @@
 		<maven-compiler-plugin.version>3.5.1</maven-compiler-plugin.version>
 		<openapi-generator-maven-plugin.version>5.3.0</openapi-generator-maven-plugin.version>
 		<maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
+		<spring.boot.maven.plugin.version>2.6.4</spring.boot.maven.plugin.version>
+		<spring.boot.dependencies.version>2.6.4</spring.boot.dependencies.version>
 	</properties>
 	<dependencyManagement>
 		<dependencies>
@@ -46,6 +48,13 @@
 		</dependencies>
 	</dependencyManagement>
 	<dependencies>
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -73,11 +82,7 @@
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.mapstruct/mapstruct-jdk8 -->
-		<dependency>
-			<groupId>org.mapstruct</groupId>
-			<artifactId>mapstruct</artifactId>
-			<version>${mapstruct.version}</version>
-		</dependency>
+
 
 
 		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter -->
@@ -139,12 +144,7 @@
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<version>${lombok.version}</version>
-			<optional>true</optional>
-		</dependency>
+
 
 		<dependency>
 			<groupId>io.swagger.core.v3</groupId>
@@ -160,6 +160,12 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.mapstruct</groupId>
+			<artifactId>mapstruct</artifactId>
+			<version>${mapstruct.version}</version>
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-ui -->
 		<dependency>
 			<groupId>org.springdoc</groupId>
@@ -170,6 +176,19 @@
 
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>${spring.boot.maven.plugin.version}</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>repackage</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -188,24 +207,23 @@
 							<artifactId>lombok</artifactId>
 							<version>${lombok.version}</version>
 						</path>
+						<dependency>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok-mapstruct-binding</artifactId>
+							<version>0.2.0</version>
+						</dependency>
 					</annotationProcessorPaths>
-					<debug>true</debug>
+					<compilerArgs>
+						<compilerArg>
+							-Amapstruct.defaultComponentModel=spring
+						</compilerArg>
+						<compilerArg>
+							-Amapstruct.verbose=true
+						</compilerArg>
+					</compilerArgs>
 				</configuration>
 			</plugin>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-				<executions>
-					<execution>
-						<goals>
-							<goal>repackage</goal>
-						</goals>
-						<configuration>
-							<mainClass>com.prueba.manomano.ManomanoApplication</mainClass>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
+
 			<plugin>
 				<groupId>org.openapitools</groupId>
 				<artifactId>openapi-generator-maven-plugin</artifactId>
